--- a/app/src/main/res/layout/activity_health_score.xml
+++ b/app/src/main/res/layout/activity_health_score.xml
@@ -69,7 +69,7 @@
             android:layout_height="89dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/circle"
+            android:background="@drawable/hexagon"
             android:text="84"
             android:textColor="@color/white"
             android:textSize="25dp" />
